se añadio el formulario de contacto y su respectivo css

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,7 +36,24 @@
 
     </header>
 
-    <main>
+    <main class="mainContacto">
+        
+        <section class="formContacto">
+            <div class="cajaFormulario">
+                <h1>CONTACTANOS</h1>
+                <form class="formulario">
+                    <label for="nombre">NOMBRE COMPLETO:</label>
+                    <input type="text" required>
+                    <label for="mail">INGRESA UN CORREO ELECTRONICO</label>
+                    <input type="email" required>
+                    <label for="numero">INDICA TU NUMERO TELEFONICO:</label>
+                    <input type="tel" required>
+                    <label for="consulta">DEJA AQUI TU CONSULTA:</label>
+                    <textarea name="consulta" cols="30" rows="10" required></textarea>
+                    <input type="submit" value="Envia tu consulta">
+                </form>
+            </div>
+        </section>
 
     </main>
 
