Se corrigio el boton de como llegar a "ubicacion"

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -23,7 +23,7 @@
                     <li>Habitaciones</li>
                 </a>
                 <a href="./location.html" class="boton3">
-                    <li>Como llegar</li>
+                    <li>Ubicación</li>
                 </a>
                 <a href="./contact.html" class="boton4">
                     <li>Contactanos</li>
