--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li>Habitaciones</li>
                 </a>
                 <a href="./pages/location.html" class="boton3">
-                    <li>Como llegar</li>
+                    <li>Ubicación</li>
                 </a>
                 <a href="./pages/contact.html" class="boton4">
                     <li>Contactanos</li>
