se añadio 2 media querys

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h2>"Los medanos"</h2>
             </div>
 
-            <div class="img-titulo" >
+            <div class="imgTitulo" >
                 <img src="./img/frente.jpg" alt="Frente de una casa, color amarillo con 2 ventanas y galeria">
             </div>
 
