--- a/pages/rooms.html
+++ b/pages/rooms.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Complejo "El condor"</title>
@@ -13,30 +14,37 @@
 <body class="rooms">
 
     <header>
+        <nav class="navbar navbar-expand-lg" aria-label="Ninth navbar example">
+            <div class="container-xl">
+                <a class="navbar-brand" href="../index.html
+                "><img src="../img/logo-blanco.png" class="logo" alt="logo complejo el condor"></a>
+                <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-        <nav class="barraNavegacion">
-            <ul>
-                <a href="../index.html" class="logo">
-                    <img src="../img/logo-blanco.png" alt="logo complejo el condor">
-                </a>
-                <a href="../index.html" class="boton1">
-                    <li>Inicio</li>
-                </a>
-                <a href="./rooms.html" class="boton2">
-                    <li>Habitaciones</li>
-                </a>
-                <a href="./location.html" class="boton3">
-                    <li>Ubicación</li>
-                </a>
-                <a href="./contact.html" class="boton4">
-                    <li>Contactanos</li>
-                </a>
-                <a href="./reservation.html" class="boton5">
-                    <li>Reserva</li>
-                </a>
-            </ul>
+                <div class="collapse navbar-collapse" id="navbarsExample07XL">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-ul">
+                        <li class="nav-item me-md-2">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item me-md-2">
+                            <a class="nav-link" href="./rooms.html">Habitaciones</a>
+                        </li>
+                        <li class="nav-item me-md-2">
+                            <a class="nav-link" href="./location.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item me-md-2">
+                            <a class="nav-link" href="./contact.html">Contacto</a>
+                        </li>
+                        <li class="nav-item me-md-2">
+                            <a class="nav-link" href="./reservation.html">Reserva</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-
     </header>
 
     <main class="mainHistory">
@@ -88,6 +96,8 @@
     <script>
         AOS.init();
     </script>
+    <!-- Script bootstrap -->
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
