Agregue galeria a la pagina rooms

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
         <section class="presentacion" data-aos="zoom-out">
             <div class="titulo">
-                <h1>Complejo el Condor</h1>
-                <h2>"Los medanos"</h2>
+                <h1 class="tamaño-titulo">Complejo el Condor</h1>
+                <h2 class="tamaño-titulo">"Los medanos"</h2>
             </div>
 
             <div class="imgTitulo">
