--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
     </header>
     <!-- Inicio del main -->
-    <main class="mainIndex">
+    <main class="main-index">
 
         <section class="presentacion" data-aos="zoom-out">
             <div class="titulo">
@@ -55,7 +55,7 @@
                 <h2 class="tamaño-titulo">"Los medanos"</h2>
             </div>
 
-            <div class="imgTitulo">
+            <div class="img-titulo">
                 <img src="./img/frente.jpg" alt="Frente de una casa, color amarillo con 2 ventanas y galeria">
             </div>
 
