Se agrego contenido al footer y se acomodo clases

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </main>
     <!--inicio del footer  -->
     <footer>
+        <h3 class="contenido-footer">©2023 Los Medanos / Maxi-Alvz</h3>
     </footer>
 
     <!-- script bootstrap -->
