--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,9 +47,9 @@
 
     <main class="mainContacto" data-aos="zoom-out">
         
-        <section class="formContacto">
-            <div class="cajaFormulario">
-                <h1 class="tituloContacto">CONTACTANOS</h1>
+        <section class="form-contacto">
+            <div class="caja-formulario">
+                <h1 class="titulo-contacto">CONTACTANOS</h1>
                 <form class="formulario">
                     <label for="nombre">NOMBRE COMPLETO:</label>
                     <input type="text" class="respuesta" required>
@@ -59,7 +59,7 @@
                     <input type="tel" required class="respuesta">
                     <label for="consulta">DEJA AQUI TU CONSULTA:</label>
                     <textarea name="consulta" cols="30" rows="10" class="respuesta textarea" required></textarea>
-                    <input type="submit" value="Envia tu consulta" class="botonConsulta">
+                    <input type="submit" value="Envia tu consulta" class="boton-consulta">
                 </form>
             </div>
             <div class="redes">
@@ -79,7 +79,7 @@
     </main>
 
     <footer>
-
+        <h3 class="contenido-footer">©2023 Los Medanos / Maxi-Alvz</h3>
     </footer>
     <!-- scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
