--- a/pages/location.html
+++ b/pages/location.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-
+        <h3 class="contenido-footer">©2023 Los Medanos / Maxi-Alvz</h3>
     </footer>
         <!-- scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
