--- a/pages/rooms.html
+++ b/pages/rooms.html
@@ -166,7 +166,7 @@
 
 
     <footer>
-
+        <h3 class="contenido-footer">©2023 Los Medanos / Maxi-Alvz</h3>
     </footer>
 
     <!-- scripts -->
