--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -45,11 +45,11 @@
     </header>
 
     <main>
-
+      
     </main>
 
     <footer>
-
+        <h3 class="contenido-footer">©2023 Los Medanos / Maxi-Alvz</h3>
     </footer>
         <!-- Script bootstrap -->
         <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
