agregue de todo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Complejo "El condor"</title>
 </head>
 
-<body>
+<body class="body-index">
 
     <header>
         <nav class="navbar navbar-expand-lg" aria-label="Ninth navbar example">
