esto es al pedo xq cambio todo despues

--- a/index.html
+++ b/index.html
@@ -60,6 +60,44 @@
             </div>
 
         </section>
+        
+        <section class="actividades">
+            <h3>Puntos de Interes en el balneario</h3>
+            <div class="contenido-actividades">
+                <!-- faro -->
+                <div class="card">
+                    <img src="./img/faro.webp" class="card-img-top" alt="faro blanco sobre un fondo de playa">
+                    <div class="card-body">
+                      <h5 class="card-title">EL FARO</h5>
+                      <p class="card-text">En este balneario está el primer faro de la Patagonia, inaugurado por el gobernador de Río Negro, general Lorenzo Vinter, en 1887. Está levantado sobre el nacimiento de los acantilados que caracterizan a la costa patagónica y su altura sobre el nivel del mar es de 45,62 metros.</p>
+                    </div>
+                </div>
+                <!-- ceferino -->
+                <div class="card">
+                    <img src="./img/ceferino.jpg" class="card-img-top" alt="mirador ceferino">
+                    <div class="card-body">
+                      <h5 class="card-title">MIRADOR DE CEFERINO</h5>
+                      <p class="card-text">Para los devotos de Ceferino Namuncurá, esta ermita ubicada en el comienzo de los acantilados tiene un monumento y una capillita, desde donde se puede apreciar tanto la villa marítima como el río en su desembocadura y parte de su trayecto.</p>
+                    </div>
+                </div>
+                <!-- pescadero -->
+                <div class="card"">
+                    <img src="./img/pescadero.jpg" class="card-img-top" alt="Costa del rio previo a la desembocadura">
+                    <div class="card-body">
+                      <h5 class="card-title">EL PESCADERO</h5>
+                      <p class="card-text">Transitando por calle 8 hacia la desembocadura del río Negro se encuentra este sitio importante para los pescadores y para los que gustan de los deportes náuticos es un área apta para la pesca embarcada y de costa, pudiéndose obtener especies como corvina, pescadilla, pejerrey y lenguado.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/playa-bonita.jpg" class="card-img-top" alt="costa de playa bonita">
+                    <div class="card-body">
+                      <h5 class="card-title">PLAYA BONITA</h5>
+                      <p class="card-text">Se encuentra a 15 kilómetros de El Cóndor sobre la Ruta Provincial Nº 1, accediendo por una explanada realizada en el acantilado. La playa de arena blanca cuenta con un espigón natural al que se puede ingresar por medio de pasarelas, donde se practica la pesca con óptimos resultados.</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
     </main>
     <!--inicio del footer  -->
