SE AGREGO RESERVA

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <section class="presentacion" data-aos="zoom-out">
             <div class="titulo">
-                <h1 class="tamaño-titulo">Complejo el Condor</h1>
+                <h1 class="tamaño-titulo">el Condor complejo</h1>
                 <h2 class="tamaño-titulo">"Los medanos"</h2>
             </div>
 
