--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <title>Complejo "El condor"</title>
 </head>
-<body>
+<body class="body-reserva">
 
     <header>
         <nav class="navbar navbar-expand-lg" aria-label="Ninth navbar example">
