se agrego los meta y se modifico ciertos alt

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Complejo "El condor"</title>
+    <meta name="keywords" content="alquiler, cabaña, el condor, balneario, playa">
+    <meta name="description" content="Cabaña en alquiler equipada para 6 personas, ubicada en el Balneario El Condor. Hace tu reserva y disfruta de unas vacaciones en familia.">
+    <title>Complejo "Los Medanos"</title>
 </head>
 
 <body class="body-index">
