--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Complejo "El condor"</title>
+    <meta name="keywords" content="contacto, dudas, consulta, pregunta, precio">
+    <meta name="description" content="Realiza tu consulta y recibiras tu respuesta en las proximas 48hs">
+    <title>Contacto - Complejo "Los Medanos" </title>
 </head>
 <body>
 
