--- a/pages/location.html
+++ b/pages/location.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Complejo "El condor"</title>
+    <meta name="keywords" content="ubicacion, como llegar, gps, google maps, dirección">
+    <meta name="description" content="Descubri como llegar al complejo y despeja todas tus dudas sobre la ubicación del mismo">
+    <title>Ubicación - Complejo "Los Medanos"</title>
 </head>
 <body>
 
