--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Complejo "El condor"</title>
+    <meta name="keywords" content="reserva, precio, disponibilidad, fecha, entrada, salida">
+    <meta name="description" content="Realiza tu reserva 100% online, consulta disponibilidad de fechas y asegura tus dias perfectos para vacacionar">
+    <title>Reserva - Complejo "Los Medanos" </title>
 </head>
 <body class="body-reserva">
 
