Se modifico el calendario

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -65,7 +65,7 @@
                 </form>
             </div>
             <div class="calendario">
-                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23616161&ctz=UTC&showTitle=0&showNav=0&showPrint=0&showCalendars=0&showTabs=0&showTz=0&src=bWF4aWFsdno0NjFAZ21haWwuY29t&src=MDZiYmNmNThkYzU2MzgwMGI5MmZjNjM0ZDM0OTIyMjE5NDA4YjkyNjVhOWE1NmZkYzVkYmQ1MzEyMjdmMjczM0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=Y2xhc3Nyb29tMTA3NzY4MDk4MDIxMjAyMDUxNjEwQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=Y2xhc3Nyb29tMTAyMTkyMDA3ODAyOTU1Njk3OTAxQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=ZXMuYXIjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y2xhc3Nyb29tMTA3MTU3MTc0OTk3Mjc3MjY3OTE3QGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y2xhc3Nyb29tMTAxNjI0MjIzNzE4NTgwNTk4ODUyQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039BE5&color=%23616161&color=%23202124&color=%2333B679&color=%23202124&color=%230B8043&color=%23137333&color=%23b80672" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23616161&ctz=UTC&showTitle=1&showNav=1&showDate=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&src=MDZiYmNmNThkYzU2MzgwMGI5MmZjNjM0ZDM0OTIyMjE5NDA4YjkyNjVhOWE1NmZkYzVkYmQ1MzEyMjdmMjczM0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%234285F4" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
         </section>
       
