--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/iconos/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
     <meta name="keywords" content="reserva, precio, disponibilidad, fecha, entrada, salida">
     <meta name="description" content="Realiza tu reserva 100% online, consulta disponibilidad de fechas y asegura tus dias perfectos para vacacionar">
@@ -47,7 +48,7 @@
         </nav>
     </header>
 
-    <main class="main-reserva">
+    <main class="main-reserva" data-aos="zoom-out">
         <section class="reserva">
             <div class="formulario-reserva">
                 <h1>Realiza tu reserva</h1>
@@ -74,6 +75,10 @@
     <footer>
         <h3 class="contenido-footer">©2023 Los Medanos / Maxi-Alvz</h3>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
         <!-- Script bootstrap -->
         <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
