--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -53,28 +53,33 @@
             <div class="formulario-reserva">
                 <h1>Realiza tu reserva</h1>
                 <h2>indicanos los siguientes datos:</h2>
-                <form action="">
+                <form class="form" id="formReserva">
                     <label>NOMBRE:</label>
-                    <input type="text">
+                    <input type="text" id="nombre">
                     <label>NUMERO DE TELEFONO:</label>
-                    <input type="tel">
+                    <input type="tel" id="telefono">
                     <label>FECHA DE ENTRADA:</label>
-                    <input type="date">
+                    <input type="date" id="fechaEntrada" required>
                     <label>FECHA DE SALIDA:</label>
-                    <input type="date">
-                    <input type="submit" value="Realiza tu reserva">
+                    <input type="date" id="fechaSalida" max="2025-01-01" required>
+                <input type="submit" class="btn-reserva" id="btn-reserva" value="Realiza tu reserva">
                 </form>
             </div>
-            <div class="calendario">
-                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23616161&ctz=UTC&showTitle=1&showNav=1&showDate=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&src=MDZiYmNmNThkYzU2MzgwMGI5MmZjNjM0ZDM0OTIyMjE5NDA4YjkyNjVhOWE1NmZkYzVkYmQ1MzEyMjdmMjczM0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%234285F4" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <div class="datos-reserva">
+                <h2>Datos de su reserva:</h2>
+                <ul class="listaReservas" id="listaReservas"></ul>
+                <p id="total" class="total
+                "></p>
+                <div class="botonesReservas" id="botonesReservas"></div>
             </div>
         </section>
-      
     </main>
 
     <footer>
         <h3 class="contenido-footer">©2023 Los Medanos / Maxi-Alvz</h3>
     </footer>
+    <script src="../js/constructores.js"></script>
+    <script src="../js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
