--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.css" integrity="sha512-kT0v1BxcibEO2Yc+6Z3W1gNsN+2cZ/U6uITqHhIJl8SAvt9vpO8llugdCPXA7cCnp8G1xbuSqHNMRaR3Zlz9yA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.9/sweetalert2.min.css" integrity="sha512-qvZv/T03Gkf34oxn0h7z8Le4LJtmJzZj4c7ppAA6V6dB/wDFAggxLjKOX9ToKNvj9Ala+DLvPG74OGbXliTs4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="keywords" content="reserva, precio, disponibilidad, fecha, entrada, salida">
     <meta name="description" content="Realiza tu reserva 100% online, consulta disponibilidad de fechas y asegura tus dias perfectos para vacacionar">
@@ -86,7 +87,9 @@
         AOS.init();
     </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.9/sweetalert2.min.js" integrity="sha512-NRyo1rY9K5C++WKegF4jJxjIIz/AfAy5PvBM96DZy9Btc5S7NQPALl2+gN+rlDVt8wj/vtlmA5XF7vteBrH1eg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <!-- Script bootstrap -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.js" integrity="sha512-ZHzbWDQKpcZxIT9l5KhcnwQTidZFzwK/c7gpUUsFvGjEsxPusdUCyFxjjpc7e/Wj7vLhfMujNx7COwOmzbn+2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="../js/clima.js"></script>        
+<!-- Script bootstrap -->
         <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
